SFUSA/force-app/main/default/objects/Application_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>