SFUSA/force-app/main/default/objects/Application_Answer__c/fields/Application_Question__c.field-meta.xml
<CustomField>
        <fullName>Application_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Application Answers</relationshipLabel>
        <relationshipName>Application_Answers</relationshipName>
        <type>Lookup</type>
    </CustomField>