SFUSA/force-app/main/default/objects/Application_Answer__c/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <description>Order in which to display the answer choice</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>